--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "private": true,
   "dependencies": {
+    "@blackbox-vision/react-qr-reader": "^5.0.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.3.0",
@@ -24,7 +25,6 @@
     "next": "12.0.7",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
-    "react-qr-scanner": "^1.0.0-alpha.8",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
